--- a/e-commerce.html
+++ b/e-commerce.html
@@ -10,6 +10,12 @@
     <header class="custom-header">
     <div class="custom-header-inner">
         <a href="#" class="custom-logo">ASM</a>
+        <a href="#" class="about">about</a>
+        <a href="#" class="sells">best sells</a>
+        <a href="#" class="itmes">New itmes</a>
+        <a href="#" class="discount">Discounts</a>
+        <a href="#" class="part">Be our ambassador </a>
+        <a href="#" class="policy">Our policy</a>
         <button class="custom-menu-button" type="button" id="toggleButton">
             <span class="custom-menu-icon"></span>
         </button>
@@ -32,7 +38,7 @@
         <div class="custom-album-inner">
             <!-- Ajoutez ici les éléments de la carte -->
             <div class="custom-card">
-                <img src="shoes.jpg" alt="logo">
+                <img src="shoes.webp" alt="logo">
                 <h2 class="custom-card-title">Shoes section</h2>
                 <p class="custom-card-description">We highly support and create ASM's shoes that combines between comfort and elegant </p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
@@ -41,7 +47,7 @@
             </div>
 
             <div class="custom-card">
-                <img src="dresses.jpg" alt="logo">
+                <img src="dresses.webp" alt="logo">
                 <h2 class="custom-card-title">Dresses</h2>
                 <p class="custom-card-description">We design highly quality dresses for our queens</p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
@@ -49,7 +55,7 @@
             </div>
 
             <div class="custom-card">
-                <img src="tp.jpg" alt="logo">
+                <img src="tp.webp" alt="logo">
                 <h2 class="custom-card-title">Tops and T-shirts</h2>
                 <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
