Modify on website

--- a/e-commerce.html
+++ b/e-commerce.html
@@ -6,16 +6,20 @@
     <title>be elegant, be you</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="custom">
     <header class="custom-header">
     <div class="custom-header-inner">
         <a href="#" class="custom-logo">ASM</a>
-        <a href="#" class="about">about</a>
-        <a href="#" class="sells">best sells</a>
-        <a href="#" class="itmes">New itmes</a>
-        <a href="#" class="discount">Discounts</a>
-        <a href="#" class="part">Be our ambassador </a>
-        <a href="#" class="policy">Our policy</a>
+
+    <div class="about">
+        <a href="#" class="about ">About</a>
+        <a href="#" class="about">Best sells</a>
+        <a href="#" class="about">New itmes</a>
+        <a href="#" class="about">Discounts</a>
+        <a href="#" class="about">Be our ambassador </a>
+        <a href="#" class="about">Our policy</a>
+
+    </div>
         <button class="custom-menu-button" type="button" id="toggleButton">
             <span class="custom-menu-icon"></span>
         </button>
@@ -43,6 +47,7 @@
                 <p class="custom-card-description">We highly support and create ASM's shoes that combines between comfort and elegant </p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
 
             </div>
 
@@ -52,6 +57,7 @@
                 <p class="custom-card-description">We design highly quality dresses for our queens</p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
             </div>
 
             <div class="custom-card">
@@ -60,7 +66,68 @@
                 <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
             </div>
+
+                    <div class="custom-card">
+                        <img src="hodies.webp" alt="logo">
+                        <h2 class="custom-card-title">Hodies</h2>
+                        <p class="custom-card-description">We highly support and create ASM's shoes that combines between comfort and elegant </p>
+                        <a href="#" class="custom-btn custom-primary-btn">View</a>
+                        <a href="#" class="custom-btn addcard">Add to card</a>
+                        <a href="#" class="custom-btn price">price</a>
+        
+            </div>
+            <div class="custom-card">
+                <img src="jackets.webp" alt="logo">
+                <h2 class="custom-card-title">Jackets</h2>
+                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <a href="#" class="custom-btn custom-primary-btn">View</a>
+                <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
+            </div>
+            <div class="custom-card">
+                <img src="Jeans.webp" alt="logo">
+                <h2 class="custom-card-title">Jeans</h2>
+                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <a href="#" class="custom-btn custom-primary-btn">View</a>
+                <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
+            </div>
+            <div class="custom-card">
+                <img src="oversizedtshirt.webp" alt="logo">
+                <h2 class="custom-card-title">oversize t-shirt</h2>
+                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <a href="#" class="custom-btn custom-primary-btn">View</a>
+                <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
+            </div>
+            <div class="custom-card">
+                <img src="trousersandleggings.webp" alt="logo">
+                <h2 class="custom-card-title">Sport</h2>
+                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <a href="#" class="custom-btn custom-primary-btn">View</a>
+                <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
+            </div>
+            <div class="custom-card">
+                <img src="bags.webp" alt="logo">
+                <h2 class="custom-card-title">Bags</h2>
+                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <a href="#" class="custom-btn custom-primary-btn">View</a>
+                <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
+            </div>
+            <div class="custom-card">
+                <img src="earnings.webp" alt="logo">
+                <h2 class="custom-card-title">Jewellery</h2>
+                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <a href="#" class="custom-btn custom-primary-btn">View</a>
+                <a href="#" class="custom-btn addcard">Add to card</a>
+                <a href="#" class="custom-btn price">price</a>
+            </div>
+
+                    
         </div>
     </div>
 </main>
@@ -68,7 +135,9 @@
 <footer class="custom-footer">
     <div class="custom-footer-inner">
         <p class="custom-footer-text">
-            Album example is © Your Website Name
+            For more info:
+            <a class = "contact" href="mailto:bouhamidi.sal@gmail.com" target="_blank">Contact us via our email</a>
+            <a href="#top" class= "backmain" >back to top</a>
         </p>
         <p class="custom-footer-text">
             New to web development? <a href="#" class="custom-footer-link">Visit our homepage</a> or read our <a href="#" class="custom-footer-link">getting started guide</a>.
