--- a/e-commerce.html
+++ b/e-commerce.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>be elegant, be you</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="custom">
     <header class="custom-header">
@@ -16,8 +18,8 @@
         <a href="#" class="about">Best sells</a>
         <a href="#" class="about">New itmes</a>
         <a href="#" class="about">Discounts</a>
-        <a href="#" class="about">Be our ambassador </a>
         <a href="#" class="about">Our policy</a>
+        <i class="fa-solid fa-bars"></i>
 
     </div>
         <button class="custom-menu-button" type="button" id="toggleButton">
@@ -72,7 +74,7 @@
                     <div class="custom-card">
                         <img src="hodies.webp" alt="logo">
                         <h2 class="custom-card-title">Hodies</h2>
-                        <p class="custom-card-description">We highly support and create ASM's shoes that combines between comfort and elegant </p>
+                        <p class="custom-card-description">are you looking for your style? ASM got your back </p>
                         <a href="#" class="custom-btn custom-primary-btn">View</a>
                         <a href="#" class="custom-btn addcard">Add to card</a>
                         <a href="#" class="custom-btn price">price</a>
@@ -81,7 +83,7 @@
             <div class="custom-card">
                 <img src="jackets.webp" alt="logo">
                 <h2 class="custom-card-title">Jackets</h2>
-                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <p class="custom-card-description">You can tell a lot about the quality of the leather jacket by touching it with your fingers.</p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
                 <a href="#" class="custom-btn price">price</a>
@@ -89,7 +91,7 @@
             <div class="custom-card">
                 <img src="Jeans.webp" alt="logo">
                 <h2 class="custom-card-title">Jeans</h2>
-                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <p class="custom-card-description">We made our jeans with love, passion and perfection.</p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
                 <a href="#" class="custom-btn price">price</a>
@@ -97,7 +99,7 @@
             <div class="custom-card">
                 <img src="oversizedtshirt.webp" alt="logo">
                 <h2 class="custom-card-title">oversize t-shirt</h2>
-                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <p class="custom-card-description">Soft and comfortable </p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
                 <a href="#" class="custom-btn price">price</a>
@@ -105,7 +107,7 @@
             <div class="custom-card">
                 <img src="trousersandleggings.webp" alt="logo">
                 <h2 class="custom-card-title">Sport</h2>
-                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <p class="custom-card-description">We support our champions </p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
                 <a href="#" class="custom-btn price">price</a>
@@ -113,7 +115,7 @@
             <div class="custom-card">
                 <img src="bags.webp" alt="logo">
                 <h2 class="custom-card-title">Bags</h2>
-                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <p class="custom-card-description">We provide to our ladies the best quality bags </p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
                 <a href="#" class="custom-btn price">price</a>
@@ -121,7 +123,7 @@
             <div class="custom-card">
                 <img src="earnings.webp" alt="logo">
                 <h2 class="custom-card-title">Jewellery</h2>
-                <p class="custom-card-description">do you want to look Goregous?yeap, You are in the right place</p>
+                <p class="custom-card-description">Be elegant, be you</p>
                 <a href="#" class="custom-btn custom-primary-btn">View</a>
                 <a href="#" class="custom-btn addcard">Add to card</a>
                 <a href="#" class="custom-btn price">price</a>
